# path-tracing-2d-rs

./: Cargo.toml  README.md
Examples/: simple.json
src/: lib.rs  light.rs  main.rs  object.rs  ray.rs  scene.rs  screen.rs  utils.rs  vector.rs
