[package]
name = "rayrs"
version = "0.1.0"
authors = ["Martin Jérémie <martin.jeremie42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.10"
ncollide2d = { version = "0.23", features = ["serde-serialize"] }
line_drawing = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"
